# libzmq

./: .gitignore  CMakeLists.txt  dist.info
src/: platform.hpp.cmake
